--- a/src/components/navbar/Header.astro
+++ b/src/components/navbar/Header.astro
@@ -39,21 +39,21 @@ import HeaderButton from '../UI/HeaderButton.astro';
       {/* Actions */}
       <div class="top-0 px-10 pt-2.5 pb-2.5 justify-between items-center flex"> 
         <div class="flex space-x-6">
-          <button class="bg-[rgba(251,243,225,255)] rounded-2xl sketch-shadow group transition-transform duration-300 hover:scale-110">
+          <button class="cursor-pointer bg-[rgba(251,243,225,255)] rounded-2xl sketch-shadow group transition-transform duration-300 hover:scale-110">
             <div class=" sketch-inner-shadow p-2 rounded-2xl">
             <div class="rotate-180 transition-transform duration-300 group-hover:rotate-0">
             🌓
             </div>
           </div>
           </button>
-          <button class="bg-[rgba(251,243,225,255)] rounded-2xl sketch-shadow group transition-transform duration-300 hover:scale-110">
+          <button class="cursor-pointer bg-[rgba(251,243,225,255)] rounded-2xl sketch-shadow group transition-transform duration-300 hover:scale-110">
             <div class=" sketch-inner-shadow rounded-2xl p-2">
             <div class="apply-bounce">
             🚀
             </div>
             </div>
           </button>
-            <button id="profileBtn" class="sketch-shadow rotate-0 flex w-10 h-10 bg-[url(/assets/Profile.webp)] justify-center items-center bg-cover rounded-full hover:shadow-lg transition-transform duration-300 hover:scale-110">
+            <button id="profileBtn" class="cursor-pointer sketch-shadow rotate-0 flex w-10 h-10 bg-[url(/assets/Profile.webp)] justify-center items-center bg-cover rounded-full hover:shadow-lg transition-transform duration-300 hover:scale-110">
             </button>
         </div>
       </div>
