--- a/src/components/UI/HeaderButton.astro
+++ b/src/components/UI/HeaderButton.astro
@@ -8,7 +8,7 @@ interface Props {
 const { href } = Astro.props;
 ---
 
-<a href={href} class="relative inline-block hover:scale-110 transition-transform duration-300 bg-[rgba(251,243,225,255)] sketch-shadow">
+<a href={href} class="relative inline-block hover:scale-110 transition-transform duration-300 bg-[rgba(251,243,225,255)] sketchy-thin sketch-shadow">
       <div class="inset-0 flex items-center justify-center p-2 sketch-inner-shadow">
     <slot />
 </div>
