--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -20,12 +20,12 @@ import '../styles/global.css';
 					</button>
 				</div>
 				</div>
-				<div class="sketch-shadow mt-20 bg-white text-neutral-800 w-80">
+				<div class="sketchy-thin sketch-shadow mt-20 bg-white text-neutral-800 w-80">
 					<div class="sketch-inner-shadow p-3">
 				<input type="text" placeholder="Join Us" class="text-2xl font-[cabinSketch] w-full h-full font-bold outline-none border-none focus:ring-0"></input>
 			</div>
 		</div>
-				<button class="cursor-pointer mt-10 sketch-shadow bg-[rgba(251,243,225,255)] text-neutral-800 hover:bg-[#221412] hover:text-white motion-safe:hover:scale-110 transition-transform duration-300">
+				<button class="cursor-pointer mt-10 sketchy-thin sketch-shadow bg-[rgba(251,243,225,255)] text-neutral-800 hover:bg-[#221412] hover:text-white motion-safe:hover:scale-110 transition-transform duration-300">
 					<div class="sketch-inner-shadow p-3">
 				<p class="text-2xl font-[cabinSketch] font-bold">Join Us</p>
 			</div>
