--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,23 @@
     pointer-events: none; 
 }
 
+.sketchy-thin {
+    position: relative;
+}
+
+.sketchy-thin::before {
+    content: "";
+    position: absolute;
+    top: 0px; 
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: 2px solid rgb(44, 44, 44); 
+    filter: url("#sketchy"); 
+    border-radius: inherit; 
+    pointer-events: none; 
+}
+
 @keyframes smoothBounce {
     0% { transform: translateY(0); }
     30% { transform: translateY(-10px); } 
